2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.1

==================== 2.22.0 ====================

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.22.0.

2008-02-26  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: post-release bump to 2.21.93

==================== 2.21.92 ====================

2008-02-26  Olav Vitters  <olav@bkor.dhs.org>

	* NEWS:
	* README:
	* configure.in: Version 2.21.92.

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.21.92

==================== 2.21.91 ====================

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.21.91.

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	* util/Makefile.am: don't install gnome-menu-spec-test

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	We don't need multiple monitor backends anymore. Just depend on gio.

	* configure.in: unconditionnally depend on gio, remove backend
	selection cruft
	* libmenu/Makefile.am:
	* libmenu/menu-monitor.c: (get_registry_key), (monitor_callback),
	(register_monitor), (lookup_monitor), (menu_monitor_unref):
	* libmenu/menu-monitor.h:
	* libmenu/menu-monitor-backend.h: killed
	* libmenu/menu-monitor-fam.c: killed
	* libmenu/menu-monitor-gio.c: killed 
	* libmenu/menu-monitor-inotify.c: killed
	* libmenu/menu-monitor-none.c: killed

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.21.91

==================== 2.21.90 ====================

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.21.90.

2008-01-20  Vincent Untz  <vuntz@gnome.org>

	* configure.in: test for gio 2.15.2
	Fix bug #509826. Thanks to Saleem Abdulrasool <compnerd@compnerd.org>

2008-01-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.21.90

==================== 2.21.5 ====================

2008-01-14  Vincent Untz  <vuntz@gnome.org>
