@@ -1,3 +1,11 @@
+2008-03-13  Vincent Untz  <vuntz@gnome.org>
+
+	* simple-editor/GMenuSimpleEditor/main.py:
+	* simple-editor/GMenuSimpleEditor/maindialog.py:
+	* simple-editor/GMenuSimpleEditor/menufilewriter.py:
+	* simple-editor/GMenuSimpleEditor/menutreemodel.py: remove shebangs
+	from non-executable Python scripts
+
 2008-03-10  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.22.1
